--- a/Index.html
+++ b/Index.html
@@ -264,229 +264,189 @@ h3 {
 
     <script src="Items.js"></script>
 <script>
-   window.onload = function() {
-    console.log(items); // Verifica que todos los elementos se carguen correctamente
-    loadCategories();
-};
+   <script>
+    window.onload = function() {
+        console.log(items); // Verifica que todos los elementos se carguen correctamente
+        loadCategories();
+    };
 
-function loadCategories() {
-    const categorySelect = document.getElementById('category');
-    Object.keys(items).forEach(category => {
-        const option = document.createElement('option');
-        option.value = category;
-        option.textContent = category;
-        categorySelect.appendChild(option);
-    });
-}
-
-document.getElementById('category').addEventListener('change', (event) => {
-    const category = event.target.value;
-    const itemGallery = document.getElementById('itemGallery');
-    itemGallery.innerHTML = '';
-
-    if (category && items[category]) {
-        items[category].forEach(item => {
-            const imageItem = document.createElement('div');
-            imageItem.className = 'image-item';
-
-            const img = document.createElement('img');
-            img.src = `images/${item.id}.png`;
-            img.alt = item.name;
-            img.draggable = true;
-
-            // Manejo del arrastre para PC
-            img.addEventListener('dragstart', (e) => {
-                e.dataTransfer.setData('text/plain', JSON.stringify({ id: item.id, name: item.name, category: category }));
-            });
-
-            // Manejo del toque para móviles
-            img.addEventListener('touchstart', (e) => {
-                e.preventDefault(); // Evita que se muestre información
-                const touch = e.touches[0];
-                img.style.position = 'absolute';
-                img.style.left = `${touch.clientX - 50}px`;
-                img.style.top = `${touch.clientY - 50}px`;
-
-                const onTouchMove = (moveEvent) => {
-                    moveEvent.preventDefault();
-                    img.style.left = `${moveEvent.touches[0].clientX - 50}px`;
-                    img.style.top = `${moveEvent.touches[0].clientY - 50}px`;
-                };
-
-                const onTouchEnd = (endEvent) => {
-                    // Manejo de la soltura en un slot
-                    slots.forEach(slot => {
-                        const slotRect = slot.getBoundingClientRect();
-                        const touch = endEvent.changedTouches[0];
-                        if (
-                            touch.clientX >= slotRect.left &&
-                            touch.clientX <= slotRect.right &&
-                            touch.clientY >= slotRect.top &&
-                            touch.clientY <= slotRect.bottom
-                        ) {
-                            // Si se suelta en un slot
-                            const quantity = document.getElementById('itemQuantity').value;
-
-                            // Verificar tipo de slot antes de añadir
-                            if (slot.dataset.type === 'wear' && category !== 'Attire') {
-                                console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
-                                return; // No hacer nada si no es de la categoría "Attire"
-                            }
-
-                            // Crear el contenedor para la imagen y la cantidad
-                            const itemContainer = document.createElement('div');
-                            itemContainer.style.position = 'relative';
-                            itemContainer.style.width = '100%';
-                            itemContainer.style.height = '100%';
-
-                            // Crear la imagen
-                            const imgSlot = document.createElement('img');
-                            imgSlot.src = `images/${item.id}.png`;
-                            imgSlot.style.width = '100%'; // Adaptar al tamaño del slot
-                            imgSlot.style.height = '100%'; // Adaptar al tamaño del slot
-
-                            // Crear el elemento para la cantidad
-                            const quantityElement = document.createElement('span');
-                            quantityElement.style.position = 'absolute';
-                            quantityElement.style.bottom = '5px';
-                            quantityElement.style.right = '5px';
-                            quantityElement.style.color = 'white';
-                            quantityElement.style.fontSize = '12px';
-                            quantityElement.style.backgroundColor = 'transparent'; // Sin fondo
-
-                            // Mostrar cantidad con "x" si es mayor a 1
-                            if (quantity > 1) {
-                                quantityElement.textContent = `x${quantity}`;
-                            }
-
-                            // Añadir la imagen y la cantidad al contenedor
-                            itemContainer.appendChild(imgSlot);
-                            itemContainer.appendChild(quantityElement);
-
-                            // Limpiar slot y añadir el contenedor
-                            slot.innerHTML = '';
-                            slot.appendChild(itemContainer);
-
-                            slot.dataset.id = item.id;
-                            slot.dataset.quantity = quantity;
-                            slot.dataset.type = slot.dataset.type;
-                        }
-                    });
-
-                    // Resetear estilo
-                    img.style.position = '';
-                    img.style.left = '';
-                    img.style.top = '';
-
-                    document.removeEventListener('touchmove', onTouchMove);
-                    document.removeEventListener('touchend', onTouchEnd);
-                };
-
-                document.addEventListener('touchmove', onTouchMove);
-                document.addEventListener('touchend', onTouchEnd);
-            });
-
-            imageItem.appendChild(img);
-            itemGallery.appendChild(imageItem);
+    function loadCategories() {
+        const categorySelect = document.getElementById('category');
+        Object.keys(items).forEach(category => {
+            const option = document.createElement('option');
+            option.value = category;
+            option.textContent = category;
+            categorySelect.appendChild(option);
         });
     }
-});
 
-const slots = document.querySelectorAll('.main-slot, .small-slot');
-slots.forEach(slot => {
-    slot.addEventListener('dragover', (e) => {
-        e.preventDefault();
+    document.getElementById('category').addEventListener('change', (event) => {
+        const category = event.target.value;
+        const itemGallery = document.getElementById('itemGallery');
+        itemGallery.innerHTML = '';
+
+        if (category && items[category]) {
+            items[category].forEach(item => {
+                const imageItem = document.createElement('div');
+                imageItem.className = 'image-item';
+
+                const img = document.createElement('img');
+                img.src = `images/${item.id}.png`;
+                img.alt = item.name;
+                img.draggable = true;
+
+                // Manejo del arrastre para PC
+                img.addEventListener('dragstart', (e) => {
+                    e.dataTransfer.setData('text/plain', JSON.stringify({ id: item.id, name: item.name, category: category }));
+                });
+
+                // Manejo del toque para móviles
+                img.addEventListener('touchstart', (e) => {
+                    e.preventDefault();
+                    const touch = e.touches[0];
+                    img.style.position = 'absolute';
+                    img.style.left = `${touch.clientX - 50}px`;
+                    img.style.top = `${touch.clientY - 50}px`;
+
+                    const onTouchMove = (moveEvent) => {
+                        moveEvent.preventDefault();
+                        img.style.left = `${moveEvent.touches[0].clientX - 50}px`;
+                        img.style.top = `${moveEvent.touches[0].clientY - 50}px`;
+                    };
+
+                    const onTouchEnd = (endEvent) => {
+                        // Manejo de la soltura en un slot
+                        slots.forEach(slot => {
+                            const slotRect = slot.getBoundingClientRect();
+                            const touch = endEvent.changedTouches[0];
+                            if (
+                                touch.clientX >= slotRect.left &&
+                                touch.clientX <= slotRect.right &&
+                                touch.clientY >= slotRect.top &&
+                                touch.clientY <= slotRect.bottom
+                            ) {
+                                const quantity = document.getElementById('itemQuantity').value;
+                                slot.innerHTML = `<img src="images/${item.id}.png" style="width: 40px;"/>${quantity > 1 ? ' x' + quantity : ''}`;
+                                slot.dataset.id = item.id;
+                                slot.dataset.quantity = quantity;
+                                slot.dataset.type = slot.dataset.type;
+                            }
+                        });
+
+                        img.style.position = '';
+                        img.style.left = '';
+                        img.style.top = '';
+                        document.removeEventListener('touchmove', onTouchMove);
+                        document.removeEventListener('touchend', onTouchEnd);
+                    };
+
+                    document.addEventListener('touchmove', onTouchMove);
+                    document.addEventListener('touchend', onTouchEnd);
+                });
+
+                imageItem.appendChild(img);
+                itemGallery.appendChild(imageItem);
+            });
+        }
     });
 
-    slot.addEventListener('drop', (e) => {
-        e.preventDefault();
-        const data = JSON.parse(e.dataTransfer.getData('text/plain'));
-        const quantity = document.getElementById('itemQuantity').value;
-
-        // Permitir "Attire" en "Wear"
-        if (slot.dataset.type === 'wear' && data.category !== 'attire') {
-            console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
-            return; // No hacer nada si no es de la categoría "Attire"
-        }
-
-        // Crear el contenedor para la imagen y la cantidad
-        const itemContainer = document.createElement('div');
-        itemContainer.style.position = 'relative';
-        itemContainer.style.width = '100%';
-        itemContainer.style.height = '100%';
-
-        // Crear la imagen
-        const img = document.createElement('img');
-        img.src = `images/${data.id}.png`;
-        img.style.width = '100%'; // Adaptar al tamaño del slot
-        img.style.height = '100%'; // Adaptar al tamaño del slot
-
-        // Crear el elemento para la cantidad
-        const quantityElement = document.createElement('span');
-        quantityElement.style.position = 'absolute';
-        quantityElement.style.bottom = '5px';
-        quantityElement.style.right = '5px';
-        quantityElement.style.color = 'white';
-        quantityElement.style.fontSize = '12px';
-        quantityElement.style.backgroundColor = 'transparent'; // Sin fondo
-
-        // Mostrar cantidad con "x" si es mayor a 1
-        if (quantity > 1) {
-            quantityElement.textContent = `x${quantity}`;
-        }
-
-        // Añadir la imagen y la cantidad al contenedor
-        itemContainer.appendChild(img);
-        itemContainer.appendChild(quantityElement);
-
-        // Limpiar slot y añadir el contenedor
-        slot.innerHTML = '';
-        slot.appendChild(itemContainer);
-
-        slot.dataset.id = data.id;
-        slot.dataset.quantity = quantity;
-        slot.dataset.type = slot.dataset.type;
-    });
-}); 
-
-document.getElementById('finalizeKit').addEventListener('click', () => {
-    const commands = [];
-    const kitName = document.getElementById('kitName').value || document.getElementById('kaosList').value;
+    const slots = document.querySelectorAll('.main-slot, .small-slot');
     slots.forEach(slot => {
-        if (slot.dataset.id) {
-            const itemId = slot.dataset.id;
-            const quantity = slot.dataset.quantity;
-            const itemType = slot.dataset.type;
-            commands.push(`kit add ${kitName} ${itemId} ${quantity} 1 ${itemType}`);
+        // Asignar el tipo de slot basado en su clase
+        if (slot.classList.contains('wear-slot')) {
+            slot.dataset.type = 'wear';
+        } else if (slot.classList.contains('main-slot')) {
+            slot.dataset.type = 'main';
+        } else if (slot.classList.contains('belt-slot')) {
+            slot.dataset.type = 'belt';
         }
+
+        slot.addEventListener('dragover', (e) => {
+            e.preventDefault();
+        });
+
+        slot.addEventListener('drop', (e) => {
+            e.preventDefault();
+            const data = JSON.parse(e.dataTransfer.getData('text/plain'));
+            const quantity = document.getElementById('itemQuantity').value;
+
+            // Verificar si el slot es de tipo "wear" y si el ítem es de tipo "attire"
+            if (slot.dataset.type === 'wear' && data.category !== 'Attire') {
+                console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
+                return; // No hacer nada si no es de la categoría "Attire"
+            }
+
+            // Crear el contenedor para la imagen y la cantidad
+            const itemContainer = document.createElement('div');
+            itemContainer.style.position = 'relative';
+            itemContainer.style.width = '100%';
+            itemContainer.style.height = '100%';
+
+            // Crear la imagen
+            const img = document.createElement('img');
+            img.src = `images/${data.id}.png`;
+            img.style.width = '100%'; // Adaptar al tamaño del slot
+            img.style.height = '100%'; // Adaptar al tamaño del slot
+
+            // Crear el elemento para la cantidad
+            const quantityElement = document.createElement('span');
+            quantityElement.textContent = quantity > 1 ? `x${quantity}` : ''; // Mostrar "x" solo si hay más de uno
+            quantityElement.style.position = 'absolute';
+            quantityElement.style.bottom = '5px';
+            quantityElement.style.right = '5px';
+            quantityElement.style.color = 'white';
+            quantityElement.style.fontSize = '12px';
+
+            // Añadir la imagen y la cantidad al contenedor
+            itemContainer.appendChild(img);
+            itemContainer.appendChild(quantityElement);
+
+            // Limpiar slot y añadir el contenedor
+            slot.innerHTML = '';
+            slot.appendChild(itemContainer);
+
+            slot.dataset.id = data.id;
+            slot.dataset.quantity = quantity;
+            slot.dataset.type = slot.dataset.type; // Asegurarte de que el tipo se guarda correctamente
+        });
     });
-    document.getElementById('command_list').innerText = commands.join('\n');
-});
 
-document.getElementById('copyCommands').addEventListener('click', () => {
-    const commandList = document.getElementById('command_list');
-    navigator.clipboard.writeText(commandList.innerText).then(() => {
-        alert('Comandos copiados al portapapeles!');
-    }).catch(err => {
-        console.error('Error al copiar: ', err);
+    document.getElementById('finalizeKit').addEventListener('click', () => {
+        const commands = [];
+        const kitName = document.getElementById('kitName').value || document.getElementById('kaosList').value;
+        slots.forEach(slot => {
+            if (slot.dataset.id) {
+                const itemId = slot.dataset.id;
+                const quantity = slot.dataset.quantity;
+                const itemType = slot.dataset.type; // Asegurarte de que el tipo se guarda correctamente
+                commands.push(`kit add ${kitName} ${itemId} ${quantity} 1 ${itemType}`);
+            }
+        });
+        document.getElementById('command_list').innerText = commands.join('\n');
     });
-});
 
-document.getElementById('newKit').addEventListener('click', () => {
-    document.getElementById('kitName').value = '';
-    document.getElementById('kaosList').value = '';
-    document.getElementById('category').value = '';
-    slots.forEach(slot => {
-        slot.innerHTML = '';
-        delete slot.dataset.id;
-        delete slot.dataset.quantity;
-        delete slot.dataset.type;
+    document.getElementById('copyCommands').addEventListener('click', () => {
+        const commandList = document.getElementById('command_list');
+        navigator.clipboard.writeText(commandList.innerText).then(() => {
+            alert('Comandos copiados al portapapeles!');
+        }).catch(err => {
+            console.error('Error al copiar: ', err);
+        });
     });
-    document.getElementById('command_list').innerText = '';
-    document.getElementById('itemQuantity').value = 1; // Resetear cantidad
-});
 
-
+    document.getElementById('newKit').addEventListener('click', () => {
+        document.getElementById('kitName').value = '';
+        document.getElementById('kaosList').value = '';
+        document.getElementById('category').value = '';
+        slots.forEach(slot => {
+            slot.innerHTML = '';
+            delete slot.dataset.id;
+            delete slot.dataset.quantity;
+            delete slot.dataset.type;
+        });
+        document.getElementById('command_list').innerText = '';
+        document.getElementById('itemQuantity').value = 1; // Resetear cantidad
+    });
 </script>
 
     <footer>
