--- a/Index.html
+++ b/Index.html
@@ -203,51 +203,49 @@ footer {
     </select>
     <div class="main-slots">
     <h3>Wear</h3>
-    <div class="small-slot" data-type="wear"></div>
-    <div class="small-slot" data-type="wear"></div>
-    <div class="small-slot" data-type="wear"></div>
-    <div class="small-slot" data-type="wear"></div>
-    <div class="small-slot" data-type="wear"></div>
-    <div class="small-slot" data-type="wear"></div>
-    <div class="small-slot" data-type="wear"></div>
+    <div class="slot-container">
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+    </div>
 
-    
     <h3>Main</h3>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
+    <div class="slot-container">
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+            <div class="main-slot" data-type="main"></div>
+            <div class="main-slot" data-type="main"></div>
+    </div>
 
-    
     <h3>Belt</h3>
-    <div class="main-slot" data-type="belt"></div>
-    <div class="main-slot" data-type="belt"></div>
-    <div class="main-slot" data-type="belt"></div>
-    <div class="main-slot" data-type="belt"></div>
-    <div class="main-slot" data-type="belt"></div>
-    <div class="main-slot" data-type="belt"></div>
+    <div class="slot-container">
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+    </div>
 </div>
-
     <label for="itemQuantity">Quantity:</label>
     <input type="number" id="itemQuantity" value="1" min="1" />
 
