--- a/Index.html
+++ b/Index.html
@@ -24,13 +24,14 @@ h3 {
 label {
     display: block;
     margin: 10px 0 5px;
+    color: #FF4500; /* Color naranja para las etiquetas */
 }
 
-input, select, button {
+input, select {
     width: 100%;
     padding: 10px;
     margin: 5px 0 10px;
-    border: none;
+    border: 2px solid #FF4500; /* Borde naranja */
     border-radius: 5px;
     background-color: #333;
     color: #fff;
@@ -38,13 +39,18 @@ input, select, button {
 }
 
 button {
-    background-color: #FF4500;
-    color: white;
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #FF4500; /* Fondo naranja */
+    color: white; /* Texto blanco */
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #E53E00;
+    background-color: #E53E00; /* Color al pasar el ratón */
 }
 
 .main-slots {
