--- a/Index.html
+++ b/Index.html
@@ -7,165 +7,156 @@
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <style>
     body {
-    font-family: 'Russo One', sans-serif;
-    background-color: #1e1e1e;
-    color: #fff;
-    margin: 0;
-    padding: 20px;
-}
+        font-family: 'Russo One', sans-serif;
+        background-color: #1e1e1e;
+        color: #fff;
+        margin: 0;
+        padding: 20px;
+    }
 
-h3 {
-    text-align: center;
-    color: #FF4500;
-    text-shadow: 1px 1px 2px #000;
-    margin-top: 20px;
-}
+    h3 {
+        text-align: center;
+        color: #FF4500;
+        text-shadow: 1px 1px 2px #000;
+        margin-top: 20px;
+    }
 
-label {
-    display: block;
-    margin: 10px 0 5px;
-    color: #FF4500; 
-}
+    label {
+        display: block;
+        margin: 10px 0 5px;
+        color: #FF4500; 
+    }
 
-input, select {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0 10px;
-    border: 2px solid #FF4500; 
-    border-radius: 5px;
-    background-color: #333;
-    color: #fff;
-    font-size: 1em;
-}
+    input, select, button {
+        width: 100%;
+        padding: 10px;
+        margin: 5px 0 10px;
+        border: 2px solid #FF4500; 
+        border-radius: 5px;
+        background-color: #333;
+        color: #fff;
+        font-size: 1em;
+    }
 
-button {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #FF4500; 
-    color: white; 
-    cursor: pointer;
-}
+    button {
+        cursor: pointer;
+    }
 
-button:hover {
-    background-color: #E53E00; 
-}
+    button:hover {
+        background-color: #E53E00; 
+    }
 
-.main-slots {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    border: 2px solid #FF4500; 
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #1e1e1e; 
-    box-shadow: 0 0 10px rgba(255, 69, 0, 0.5); 
-}
+    .main-slots {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+        border: 2px solid #FF4500; 
+        padding: 10px;
+        border-radius: 10px;
+        background-color: #1e1e1e; 
+        box-shadow: 0 0 10px rgba(255, 69, 0, 0.5); 
+    }
 
-.slot-container {
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: center; 
-    margin: 10px 0; 
-}
+    .slot-container {
+        display: flex;
+        flex-wrap: wrap; 
+        justify-content: center; 
+        margin: 10px 0; 
+    }
 
-.slot-container:nth-of-type(1) { 
-    max-width: 450px; 
-}
+    .slot-container:nth-of-type(1) { 
+        max-width: 450px; 
+    }
 
-.slot-container:nth-of-type(2), 
-.slot-container:nth-of-type(3) { 
-    max-width: 390px; 
-}
+    .slot-container:nth-of-type(2), 
+    .slot-container:nth-of-type(3), 
+    .slot-container:nth-of-type(4) { 
+        max-width: 390px; 
+    }
 
-.slot-container:nth-of-type(4) { 
-    max-width: 390px; 
-}
+    .small-slot, .main-slot {
+        width: 50px; 
+        height: 50px; 
+        border: 1px solid #FF4500; 
+        margin: 5px; 
+        background-color: #222; 
+        position: relative;
+        text-align: center;
+        line-height: 50px; 
+        border-radius: 5px; 
+        transition: background-color 0.3s; 
+    }
 
-.small-slot, .main-slot {
-    width: 50px; 
-    height: 50px; 
-    border: 1px solid #FF4500; 
-    margin: 5px; 
-    background-color: #222; 
-    position: relative;
-    text-align: center;
-    line-height: 50px; 
-    border-radius: 5px; 
-    transition: background-color 0.3s; 
-}
+    .main-slot:hover {
+        background-color: #333; 
+    }
 
+    .main-slot img {
+        max-width: 100%; 
+        max-height: 100%;
+        border-radius: 5px;
+    }
 
+    .image-container {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 10px;
+    }
 
-.main-slot:empty::before {
-    content: ' '; 
-    background-color: rgba(255, 69, 0, 0.2); 
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+    .image-item {
+        margin: 5px;
+        text-align: center;
+    }
 
-.main-slot:hover {
-    background-color: #333; 
-}
+    .image-item img {
+        width: 80px;
+        cursor: pointer;
+        border: 1px solid #FF4500;
+        border-radius: 5px;
+    }
 
+    #command_list {
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #292929;
+        border: 2px solid #FF4500;
+        border-radius: 10px;
+    }
 
-.main-slot:empty::before {
-    content: ' '; 
-    background-color: rgba(255, 69, 0, 0.2); 
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+    footer {
+        text-align: center;
+        color: #EAEAEA;
+        font-size: 0.8em;
+        margin-top: 40px;
+    }
 
-.main-slot img {
-    max-width: 100%; 
-    max-height: 100%;
-    border-radius: 5px;
-}
+    /* Media Queries para diseño responsivo */
+    @media (max-width: 768px) {
+        .small-slot, .main-slot {
+            width: 40px; 
+            height: 40px; 
+        }
 
-.image-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 10px;
-}
+        h3 {
+            font-size: 1.5em; /* Ajusta el tamaño del encabezado */
+        }
+    }
 
-.image-item {
-    margin: 5px;
-    text-align: center;
-}
+    @media (max-width: 480px) {
+        .small-slot, .main-slot {
+            width: 35px; 
+            height: 35px; 
+        }
 
-.image-item img {
-    width: 80px;
-    cursor: pointer;
-    border: 1px solid #FF4500;
-    border-radius: 5px;
-}
+        input, select, button {
+            padding: 8px; /* Reduce el padding en móviles */
+        }
 
-#command_list {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #292929;
-    border: 2px solid #FF4500;
-    border-radius: 10px;
-}
-
-footer {
-    text-align: center;
-    color: #EAEAEA;
-    font-size: 0.8em;
-    margin-top: 40px;
-}
-
+        h3 {
+            font-size: 1.2em; /* Ajusta aún más el tamaño del encabezado */
+        }
+    }
 </style>
 
 </head>
