--- a/Index.html
+++ b/Index.html
@@ -483,7 +483,7 @@
                 const itemId = slot.dataset.id;
                 const quantity = slot.dataset.quantity;
                 const itemType = slot.dataset.type; 
-                commands.push(`kit add ${kitName} ${itemId} ${quantity} 1 ${itemType}`);
+                commands.push(`kit add "${kitName}" "${itemId}" ${quantity} 1 "${itemType}"`);
             }
         });
         document.getElementById('command_list').innerText = commands.join('\n');
