--- a/Index.html
+++ b/Index.html
@@ -324,7 +324,8 @@
                 img.draggable = !isMobile; // Solo draggable si no es móvil
 
                 if (isMobile) {
-                    img.addEventListener('click', () => {
+                    img.addEventListener('touchstart', (e) => {
+                        e.preventDefault(); // Evitar el menú contextual
                         selectedItem = { id: item.id, name: item.name, category: category }; // Guardar el ítem seleccionado
                         console.log(`Seleccionado: ${item.name}`);
                     });
@@ -441,6 +442,7 @@
         document.getElementById('itemQuantity').value = 1; 
     });
 </script>
+
 
 
 
