--- a/Index.html
+++ b/Index.html
@@ -305,8 +305,11 @@
         });
     }
 
-    const isMobile = /Mobi|Android/i.test(navigator.userAgent);
-    
+    const selectedItem = {
+        id: null,
+        category: null,
+    };
+
     document.getElementById('category').addEventListener('change', (event) => {
         const category = event.target.value;
         const itemGallery = document.getElementById('itemGallery');
@@ -320,62 +323,13 @@
                 const img = document.createElement('img');
                 img.src = `images/${item.id}.png`;
                 img.alt = item.name;
-                img.draggable = !isMobile; // Solo draggable si no es móvil
 
-                if (isMobile) {
-                    // Evitar el menú contextual en dispositivos móviles
-                    img.addEventListener('touchstart', (e) => {
-                        e.preventDefault();
-                        img.classList.add('dragging'); // Clase para el efecto visual de arrastre
-                        img.style.position = 'absolute';
-                        img.style.zIndex = 1000;
-
-                        const touch = e.touches[0];
-                        img.style.left = `${touch.clientX - 50}px`;
-                        img.style.top = `${touch.clientY - 50}px`;
-
-                        const onTouchMove = (moveEvent) => {
-                            moveEvent.preventDefault();
-                            img.style.left = `${moveEvent.touches[0].clientX - 50}px`;
-                            img.style.top = `${moveEvent.touches[0].clientY - 50}px`;
-                        };
-
-                        const onTouchEnd = (endEvent) => {
-                            slots.forEach(slot => {
-                                const slotRect = slot.getBoundingClientRect();
-                                const touch = endEvent.changedTouches[0];
-                                if (
-                                    touch.clientX >= slotRect.left &&
-                                    touch.clientX <= slotRect.right &&
-                                    touch.clientY >= slotRect.top &&
-                                    touch.clientY <= slotRect.bottom
-                                ) {
-                                    const quantity = document.getElementById('itemQuantity').value;
-                                    if (slot.dataset.type === 'wear' && item.category !== 'Attire') {
-                                        console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
-                                        return; 
-                                    }
-                                    applyItemToSlot(slot, item, quantity);
-                                }
-                            });
-
-                            img.classList.remove('dragging');
-                            img.style.position = '';
-                            img.style.left = '';
-                            img.style.top = '';
-
-                            document.removeEventListener('touchmove', onTouchMove);
-                            document.removeEventListener('touchend', onTouchEnd);
-                        };
-
-                        document.addEventListener('touchmove', onTouchMove);
-                        document.addEventListener('touchend', onTouchEnd);
-                    });
-                } else {
-                    img.addEventListener('dragstart', (e) => {
-                        e.dataTransfer.setData('text/plain', JSON.stringify({ id: item.id, name: item.name, category: category }));
-                    });
-                }
+                // Al tocar la imagen, seleccionamos el item
+                img.addEventListener('click', () => {
+                    selectedItem.id = item.id;
+                    selectedItem.category = category;
+                    console.log(`Seleccionado: ${item.name}`);
+                });
 
                 imageItem.appendChild(img);
                 itemGallery.appendChild(imageItem);
@@ -385,21 +339,16 @@
 
     const slots = document.querySelectorAll('.main-slot, .small-slot');
     slots.forEach(slot => {
-        slot.addEventListener('dragover', (e) => {
-            e.preventDefault();
-        });
-
-        slot.addEventListener('drop', (e) => {
-            e.preventDefault();
-            const data = JSON.parse(e.dataTransfer.getData('text/plain'));
-            const quantity = document.getElementById('itemQuantity').value;
-
-            if (slot.dataset.type === 'wear' && data.category !== 'attire') {
-                console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
-                return; 
+        slot.addEventListener('click', () => {
+            if (selectedItem.id) {
+                const quantity = document.getElementById('itemQuantity').value;
+                if (slot.dataset.type === 'wear' && selectedItem.category !== 'Attire') {
+                    console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
+                    return; 
+                }
+                applyItemToSlot(slot, selectedItem, quantity);
+                selectedItem.id = null; // Reseteamos la selección
             }
-
-            applyItemToSlot(slot, data, quantity);
         });
     });
 
@@ -474,6 +423,7 @@
         document.getElementById('itemQuantity').value = 1; 
     });
 </script>
+
 
     <footer>
         <p>Hecho por VieraGuti</p>
