--- a/Index.html
+++ b/Index.html
@@ -364,7 +364,7 @@
             if (selectedItem.id) {
                 const quantity = document.getElementById('itemQuantity').value;
 
-                if (slot.dataset.type === 'wear' && selectedItem.category !== 'Attire') {
+                if (slot.dataset.type === 'wear' && selectedItem.category !== 'attire') {
                     console.log('Este item no es de la categoría "Attire" y no se puede aplicar aquí.');
                     return; 
                 }
