--- a/Index.html
+++ b/Index.html
@@ -451,7 +451,7 @@
 <script>
     let kitCount = 0;
 
-    document.getElementById('copyKits').addEventListener('click', function() {
+    document.getElementById('copyCommands').addEventListener('click', function() {
         kitCount++;
         document.getElementById('kitCounter').textContent = `Generated Kits Counter: ${kitCount}`;
 
