--- a/Index.html
+++ b/Index.html
@@ -467,7 +467,7 @@
     };
 
     // Asegúrate de que 'copyCommand' es el ID del botón que deseas usar
-    document.getElementById('copyCommand').addEventListener('click', function() {
+    document.getElementById('copyCommands').addEventListener('click', function() {
         // Incrementar el contador solo aquí
         kitCount++;
 
